--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -116,6 +116,10 @@ jobs:
           .\flutter\bin\flutter doctor
       - uses: moonrepo/setup-rust@v1
       - run: .\flutter\bin\flutter pub get
+      - name: Install OpenSSL 3
+      - run: |
+          choco install openssl --version=3.2.1 --force --yes
+          echo "OPENSSL_DIR=C:\Program Files\OpenSSL-Win64" >> $env:GITHUB_ENV
       - name: Build Windows Release
         run: .\flutter\bin\flutter build windows
       - name: Create archive
@@ -123,7 +127,7 @@ jobs:
       - name: Upload to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: fluffychat-windows-x64.zip
